# PharmacoMatch

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
cdpkit_preprocessing/bash_scripts/: query_generation.sh  removed.smi  screening.sh  script.sh  training_data_generation.sh  vs_data_generation.sh
data_processing/bash_scripts/: dekois_vs_data_generation.sh  enamine_data_generation.sh  query_generation.sh  screening.sh  training_data_generation.sh  vs_data_generation.sh
notebooks/: Benchmark.ipynb  Embeddings.ipynb  RandomNoise.ipynb  final_results.csv
pharmaco_match/dataset/: __init__.py  augmentation_module.py  dataset_transforms.py  pharmacophore_datamodule.py  pharmacophore_dataset.py
pharmaco_match/model/: __init__.py  callbacks.py  encoder.py  pharm_clr.py  pharmaco_match.py  phector_match.py  projector.py
pharmaco_match/scripts/: __init__.py  benchmark.py  config.yaml  hydra_script.sh  positional_perception.py  self_similarity.py  training.py
pharmaco_match/utils/: __init__.py  plotting.py  utility_functions.py
pharmaco_match/virtual_screening/: __init__.py  alignment.py  feature_count_prefilter.py  virtual_screener.py  virtual_screening_embedder.py
pharmacomatch/: __init__.py
pharmacomatch/dataset/: __init__.py  dataset_transforms.py  pharmacophore_datamodule.py  pharmacophore_dataset.py
pharmacomatch/model/: __init__.py  callbacks.py  encoder.py  pharmaco_match.py
pharmacomatch/utils/: __init__.py  plotting.py  (+1 more)
scripts/: benchmark.py  benchmark_prescreening.py  positional_perception.py  training.py
src/: run.py
(+93 files in other folders)
