[build-system]
requires = ["hatchling<=1.18.0"]
build-backend = "hatchling.build"

[project]
name = "PharmacoMatch"
version = "2024.0.0"
dependencies = [
    "torch==2.0.1",
    "torch_geometric==2.3.1",
    "lightning==2.1.0",
    "torchmetrics==0.10.3",
    "tensorboard==2.13.0",
    "numpy==1.25.1",
    "matplotlib==3.7.2",
    "scikit-learn==1.3.0",
    "pandas==2.0.3",
    "umap-learn==0.5.5",
    "datashader==0.16.0",
    "bokeh==3.3.2",
    "holoviews==1.18.1",
    "cdpkit==1.1.1",
    "rdkit==2024.03.2",
    "jupyter==1.0.0",
    "ipykernel==6.29.5"
]
requires-python = ">=3.10"
readme = "README.md"

[tool.pip]
extra-index-url = "https://download.pytorch.org/whl/cu117"